# ChessProject

./: .gitignore  CMakeLists.txt  Makefile  README.md  REPORT.md  colors.c  colors.h  draw.c  draw.h  hash.c  hash.h  load.c  load.h  main.c  main.h  move.c  move.h  moves.h  save.c  save.h  settings.h  stack.c  stack.h  tasks.todo  utils.c  utils.h
libs/: libraylib.so.5.5.0
src/: colors.c  colors.h  draw.c  draw.h  hash.c  hash.h  load.c  load.h  main.c  main.h  move.c  move.h  save.c  save.h  settings.h  stack.c  stack.h  utils.c  utils.h
